--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,10 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 24px 0;
+    position: relative;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list:hover,
@@ -97,11 +101,20 @@ img {
     color: #404bbf;
 }
 
-.list:active {
-    text-decoration: underline;
+/* ! 1 УТОЧНИТЬ ПО АКТИВАЦИИ ПСЕВДОЕЛЕМЕНТА */
+
+.list:active::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    left: 0;
+    bottom: -1px;
 }
 
-
+/* !====================== */
 .contact {
     font-style: normal;
 }
@@ -118,6 +131,9 @@ img {
     font-style: normal;
     letter-spacing: 0.02em;
     line-height: 1.5;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact:hover,
@@ -133,6 +149,9 @@ img {
     text-align: center;
     background-color: #2E2F42;
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images_hw1/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
 
 .title-basic {
@@ -154,7 +173,6 @@ img {
     text-align: center;
     background-color: #4d5ae5;
     line-height: 1.5;
-    /* padding: 16px 32px; */
     border-radius: 4px;
     display: block;
     margin: 0 auto;
@@ -163,6 +181,9 @@ img {
     border: none;
     cursor: pointer;
     margin-top: 46px;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -201,6 +222,15 @@ img {
 
 .futures-class {
     width: calc((100% - 3 * 24px) / 4);
+}
+
+.futures-icons {
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    background-color: #f4f4fd;
+    padding: 24px 100px;
+    box-sizing: content-box;
+    margin-bottom: 8px;
 }
 
 .futures-list {
@@ -243,7 +273,6 @@ img {
     display: flex;
     flex-shrink: 1;
     gap: 24px;
-
 }
 
 .team-person {
@@ -251,6 +280,10 @@ img {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     border-radius: 0 0 4px 4px;
     width: calc((100% - 3 * 24px) / 4);
+}
+
+.team-person:hover .team-person-icons {
+    background-color: #404bbf;
 }
 
 .team-person-wrap {
@@ -275,6 +308,37 @@ img {
     text-align: center;
 }
 
+.team-icons {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+}
+
+.team-person-icons {
+    margin-top: 8px;
+    padding: 12px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-person-icons:hover {
+    background-color: #31d0aa;
+}
+
+.team-icons-link {
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+}
+
+.person-icons {
+    fill: #fff;
+}
+
+
 /* *============== PORTFOLIO ================= */
 
 .products {
@@ -293,6 +357,8 @@ img {
     margin-bottom: 72px;
 }
 
+
+
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
@@ -307,6 +373,38 @@ img {
     line-height: 1.2;
     max-width: 360px;
     width: calc((100% - 2 * 24px) / 3);
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .port-cover-text {
+    transform: translateY(0);
+}
+
+.port-cover-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    padding: 40px 32px;
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .port-list-wrap {
@@ -336,6 +434,7 @@ img {
 .foot {
     background-color: #2E2F42;
     padding: 100px 0;
+    display: flex;
 }
 
 .logo-web-foot {
@@ -368,4 +467,47 @@ img {
     font-size: 16px;
     max-width: 264px;
     text-align: justify;
+}
+
+.foot-icons-media {
+    margin-left: 120px;
+}
+
+.foot-icons-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.foot-icons {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+
+.foot-href-icons {
+    margin-top: 8px;
+    padding: 12px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.foot-href-icons:hover {
+    background-color: #31d0aa;
+}
+
+.href-icons-link {
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+}
+
+.href-icons {
+    fill: #fff;
 }
