--- a/css/styles.css
+++ b/css/styles.css
@@ -282,9 +282,9 @@ img {
     width: calc((100% - 3 * 24px) / 4);
 }
 
-.team-person:hover .team-person-icons {
+/* .team-person:hover .team-person-icons {
     background-color: #404bbf;
-}
+} */
 
 .team-person-wrap {
     padding: 32px 0;
