--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ img {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header .container {
@@ -124,7 +125,7 @@ img {
     gap: 40px;
 }
 
-.contact-data {
+.contact-list-data {
     color: #434455;
     font-size: 16px;
     text-decoration: none;
