--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ img {
     gap: 40px;
 }
 
-.contact-list-data {
+.contact-data {
     color: #434455;
     font-size: 16px;
     text-decoration: none;
