--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ img {
     gap: 40px;
 }
 
-.contact-data {
+.contact-list-data {
     color: #434455;
     font-size: 16px;
     text-decoration: none;
@@ -137,8 +137,8 @@ img {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact:hover,
-.contact:focus {
+.contact-list-data:hover,
+.contact-list-data:focus {
     color: #404bbf;
 }
 
