--- a/css/styles.css
+++ b/css/styles.css
@@ -83,10 +83,6 @@ img {
     gap: 40px;
 }
 
-.first {
-    color: #404bbf;
-}
-
 .list {
     color: #2E2F42;
     font-size: 16px;
@@ -108,6 +104,10 @@ img {
 
 /* ! 1 УТОЧНИТЬ ПО АКТИВАЦИИ ПСЕВДОЕЛЕМЕНТА */
 
+.first {
+    position: relative;
+    color: #404bbf;
+}
 .first::after {
     content: "";
     position: absolute;
