--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ img {
     gap: 40px;
 }
 
-.contact-list-data {
+.contact-data {
     color: #434455;
     font-size: 16px;
     text-decoration: none;
@@ -141,7 +141,7 @@ img {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-list-data:hover,
+.contact-data:hover,
 .contact-list-data:focus {
     color: #404bbf;
 }
