--- a/css/styles.css
+++ b/css/styles.css
@@ -232,13 +232,15 @@ img {
     width: calc((100% - 3 * 24px) / 4);
 }
 
-.futures-icons {
+.futures-icons-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
     border: 1px solid #8e8f99;
     border-radius: 4px;
-    background-color: #f4f4fd;
-    padding: 24px 100px;
-    box-sizing: content-box;
-    margin-bottom: 8px;
+    margin-bottom: 8px;  
 }
 
 .futures-list {
@@ -290,9 +292,7 @@ img {
     width: calc((100% - 3 * 24px) / 4);
 }
 
-/* .team-person:hover .team-person-icons {
-    background-color: #404bbf;
-} */
+
 
 .team-person-wrap {
     padding: 32px 0;
@@ -324,15 +324,12 @@ img {
 
 .team-person-icons {
     margin-top: 8px;
-    padding: 12px;
     background-color: #4d5ae5;
     border-radius: 50%;
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
-.team-person-icons:hover {
+.team-icons .team-person-icons:hover {
     background-color: #31d0aa;
 }
 
@@ -340,10 +337,21 @@ img {
     display: flex;
     justify-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    align-items: center;
+    padding: 12px;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-person:hover .team-person-icons {
+    background-color: #404bbf;
 }
 
 .person-icons {
-    fill: #fff;
+    fill: #f4f4fd;
 }
 
 
@@ -404,6 +412,7 @@ img {
     top: 0;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #f4f4fd;
     background-color: #4d5ae5;
     height: 100%;
