--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,7 @@ img {
    
 }
 
-.team-icons .team-person-icons:hover {
+.team-icons-link:hover {
     background-color: #31d0aa;
 }
 
@@ -346,7 +346,7 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-person:hover .team-person-icons {
+.team-person:hover .team-icons-link {
     background-color: #404bbf;
 }
 
