--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,10 @@ img {
     background-color: #31d0aa;
 }
 
+.team-icons-link:focus {
+    background-color: #404bbf;
+}
+
 .team-icons-link {
     display: flex;
     justify-items: center;
@@ -346,9 +350,9 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-person:hover .team-icons-link {
+/* .team-person:hover .team-icons-link {
     background-color: #404bbf;
-}
+} */
 
 .person-icons {
     fill: #f4f4fd;
@@ -454,6 +458,11 @@ img {
     display: flex;
 }
 
+.foot-wrap {
+    display: flex;
+    align-items: baseline;
+}
+
 .logo-web-foot {
     font-family: "Raleway", sans-serif;
     text-decoration: none;
@@ -488,6 +497,17 @@ img {
 
 .foot-icons-media {
     margin-left: 120px;
+    display: flex;
+    align-items: baseline;
+
+}
+
+.logo-foot-wrap {
+    margin-right: 120px;
+}
+
+.foot-icons-media {
+    flex-direction: column;
 }
 
 .foot-icons-title {
